# codify-python-assignment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
chat_api/: models.py  serializers.py  urls.py  utils.py  views.py
chat_api/migrations/: 0001_initial.py
core/: settings.py  urls.py
