[tool.poetry]
name = "codify-test-assignment"
version = "0.1.0"
description = ""
authors = ["Zhoomart <zhoomart@mancho.dev>"]
readme = "README.md"
packages = [{include = "codify_test_assignment"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
